--- a/WeatherApi/appsettings.Development.json
+++ b/WeatherApi/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=applicationdb;Trusted_Connection=True;"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=weatherdb;Trusted_Connection=True;"
   },
   "Logging": {
     "LogLevel": {
