--- a/WeatherApi/appsettings.Development.json
+++ b/WeatherApi/appsettings.Development.json
@@ -1,11 +1,10 @@
 {
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=weatherdb;Trusted_Connection=True;"
-  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
-    }
+    },
+    "AllowedHosts": "*"
   }
 }
