--- a/WeatherApp/WeatherApp.csproj
+++ b/WeatherApp/WeatherApp.csproj
@@ -50,10 +50,13 @@
 
 	<ItemGroup>
 	  <None Remove="Platforms\Android\Resources\values\network_security_config.xml" />
+	  <None Remove="Resources\Fonts\20952.ttf" />
+	  <None Remove="Resources\Fonts\vag.ttf" />
 	</ItemGroup>
 
 	<ItemGroup>
 	  <PackageReference Include="CommunityToolkit.Maui" Version="2.0.0" />
+	  <PackageReference Include="LiveChartsCore.SkiaSharpView.Maui" Version="2.0.0-beta.701" />
 	  <PackageReference Include="UraniumUI" Version="2.3.0" />
 	  <PackageReference Include="UraniumUI.Icons.FontAwesome" Version="2.3.0" />
 	  <PackageReference Include="UraniumUI.Icons.MaterialIcons" Version="2.3.0" />
