--- a/WeatherApp/WeatherApp.csproj
+++ b/WeatherApp/WeatherApp.csproj
@@ -55,6 +55,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <PackageReference Include="LiveChartsCore.SkiaSharpView.Maui" Version="2.0.0-beta.701" />
 	  <PackageReference Include="Syncfusion.Licensing" Version="20.4.0.49" />
 	  <PackageReference Include="Syncfusion.Maui.Charts" Version="20.4.49" />
 	  <PackageReference Include="UraniumUI" Version="2.3.0" />
