--- a/WeatherApi/Properties/launchSettings.json
+++ b/WeatherApi/Properties/launchSettings.json
@@ -13,7 +13,7 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7198;http://localhost:5198;http://172.24.240.1:5198 ",
+      "applicationUrl": "https://localhost:7198;http://localhost:5198",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
